[package]
name = "gql_client"
version = "1.0.0"
authors = ["Arthur Khlghatyan <arthur.khlghatyan@gmail.com>"]
edition = "2018"
description = "Minimal GraphQL client for Rust"
readme = "README.md"
homepage = "https://github.com/arthurkhlghatyan/gql-client-rs"
repository = "https://github.com/arthurkhlghatyan/gql-client-rs"
license = "MIT"
keywords = ["graphql", "client", "async", "web", "http"]
categories = ["web-programming", "asynchronous"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies.reqwest]
version = "0.10.4"
default-features = false
features = ["rustls-tls", "json"]

[dependencies]
serde = { version="=1.0.118", features = ["derive"] }
log = "0.4.11"
serde_json = "1.0.56"
tokio = { version = "0.2", features = ["full"] }
